Fixed header image stretching

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ header {
     padding: 20px;
 }
 header img {
-    max-width: 50vw;
+    width: auto;    
     max-height: 300px;
 }
 
